--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: fire_base_real_time_db
-description: "A new Flutter package project."
+description: "fire_base_real_time_db is a Flutter package that provides an abstraction layer for Firebase Realtime Database CRUD operations. It simplifies data management with methods for saving, updating, deleting, and querying documents, including real-time stream updates."
 version: 0.0.1
-homepage:
+homepage: https://github.com/GenieCoderSrc/fire_base_real_time_db
+repository: https://github.com/GenieCoderSrc/fire_base_real_time_db
+issue_tracker: https://github.com/GenieCoderSrc/fire_base_real_time_db/issues
 
 environment:
   sdk: ^3.6.0
@@ -26,6 +28,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+example:
+  path: example
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
